--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 .rightArea{float: right;}
 .hide{display: none;}
 .show{display: block;}
+.grey{background-color: #F0F0F0;}
 /*topBar*/
 
 .topBar{height: 31px; background-color: #F7F7F7;line-height: 31px;}
@@ -80,7 +81,7 @@
 .banner{margin-bottom: 15px;}
 .banner_bar{float: right;position:relative;overflow: hidden;}
 .imgBox{width:1620px;height: 326px;position: absolute;left:0;top:0;}
-.imgBox li{float: left;}
+.imgBox li{float:right;}
 .imgBox img{display: block;}
 .imgNum{position: absolute;left:0;bottom: 15px;width: 100%;text-align: center;}
 .imgNum a{width:20px;height: 5px;overflow: hidden;background-color:#FFF ;margin:0 3px;display: inline-block;}
@@ -99,13 +100,6 @@
  }
 .more{float: right;font-family: "宋体";}
 .more:hover{text-decoration: underline;}
-.shopTit2{height: 44px;font-family: "微软雅黑";line-height: 44px;margin-bottom: 15px;}
-.shopTit2 h3{font-size: 24px; float: left;font-weight: bold;padding-left:15px;}
-.icon2{width: 44px;height:44px;background:url(../img/icon/shopIcon.gif) left top no-repeat;
-      float: left;
- }
-.more2{float: right;font-family: "宋体";}
-.more2:hover{text-decoration: underline;}
 /*商品展示*/
 .shopList{margin-bottom: 15px;}
 .shopList .leftArea{width: 190px;}
@@ -127,9 +121,167 @@
 .shopitem_text p{color:#FF7300;line-height: 15px;}
 .shopitem_text h3{font-size: 16px;font-family: "微软雅黑";font-weight: normal;color:#181818;line-height: 30px;}
 /*底部样式*/
+.h2_25{height:25px;}
+.hr_7{height: 7px;overflow: hidden;}
+.hr_15{height: 15px;overflow: hidden;}
 .footer{text-align: center;background-color:#D4D4D4 ;line-height: 24px;padding:50px 0;}
 .footer i{font-style: normal;margin:0 5px;}
 .footer a{color:#000;}
 .footer a:hover{color:#F60;}
 .webLogo{padding-top:30px;}
 .webLogo img{margin:0 12px;}
+/*产品分类*/
+.products .leftArea{width:185px;}
+.products .rightArea{width: 810px;}
+.products .banner_bar{float: none;}
+.products .item{width:25%;margin-bottom: 10px;}
+/*产品分类导航*/
+.leftNav{background-color:#F3F3F3 ;border:#D7D7D7 solid 1px;}
+.nav_title{height: 34px;line-height: 34px;font-size: 14px;border:#D7D7D7 solid 1px;text-align: center;}
+.nav_cont{padding:0 18px 4px;border-bottom:#D7D7D7 1px dotted;margin-bottom: -1px;}
+.nav_cont h3{font-size: 12px;height: 30px;line-height: 30px;}
+.navCont_list{line-height: 25px;}
+.navCont_list li{float: left;width:50%;}
+.vertical li{width:auto;float:none;padding-left: 10px;}
+.vertical .nav_title,
+.vertical .nav_cont h3{font-family: "微软雅黑";font-size: 14px;}
+/*标题*/
+.products_title{height:34px;border-bottom: #CCCCCC solid 2px;}
+.products_title h3{width:180px;height:34px;line-height:24px;
+                border-bottom: #096DBA solid 2px;text-indent:9px;
+}
+/*商品*/
+.products_list{padding-bottom:20px;}
+.item{float: left;}
+.img_item{height: 170px;text-align: center;}
+.img_item img{height:170px;}
+.text{line-height:20px;}
+.item a{color:#000;}
+.item a:hover{text-decoration: underline;}
+.money{color:#D4105A;font-size:14px;font-weight:bold;padding-top:10px;}
+.stars{width:13px;height: 12px;overflow: hidden;
+        background: url(../img/icon/stars.gif)left center no-repeat;
+        display: inline-block;margin-right:4px;
+}
+/*筛选*/
+.screening_box{}
+.screening dt{line-height: 32px;width:74px;text-align:right;float: left;margin-right: 42px;}
+.limit{width: 55px;float: left;line-height: 32px;}
+.screening .active{background-color:#1D7AD9;color:#FFF;}
+.screening a{padding:2px;}
+.screening_list{line-height: 32px;width: 626px;float: left;}
+.screening_list li{width:20%;float: left;font-family: verdana;}
+.screening_all{height: 23px;line-height: 23px;margin-top:4px;float:left;margin-right: 35px;}
+.screening_more{border:#CCC solid 1px;height: 23px;line-height: 23px;margin-top:4px;
+                float:left;padding-right: 11px;padding-left: 10px;margin-right: 15px;
+}
+.screening_all a{color:#1369C0;}
+.screening_all a:hover{text-decoration: underline;}
+.screening_item a{color:#1369C0;}
+.screening_item a:hover{text-decoration: underline;}
+.screening_more a{background: url(../img/icon/3.筛选页_r2_c2.gif)right center no-repeat;padding-right: 9px;}
+
+
+.addInfo{height: 31px;border: #CCCCCC solid 1px;background-color: #F5F5F5;}
+.address{float: left;}
+.add_text{float: left;line-height: 31px;padding-left:12px;padding-right: 6px;}
+.addInfo .select{margin-top:4px;}
+.screen_text{line-height: 31px;padding-right: 80px;}
+.check{margin-right: 10px;}
+.check input,
+.check label{vertical-align: middle;}
+.shop_number{vertical-align: middle;}
+.shop_number em{color:red;font-style: normal;font-weight: bold;}
+.addCar{border:#999 solid 1px;height: 22px;display: inline-block;padding:6px 6px 0 23px;
+        background: url(../img/icon/addCar.gif) 6px center no-repeat; 
+}
+.screening_list_more{padding-left:0.5%;}
+.screening_list_more .item{width:33.3%;text-align: center;}
+.screening_list_more em{font-size:12px;color:#2785E6;padding-left:10px;}
+.screening_list_more i{font-size:12px;color:#656565;}
+/*组件*/
+.select{border: #999 solid 1px;height: 22px;line-height: 22px;float:left;background-color:#FFF;
+padding-left:10px;padding-right: 20px;position: relative;z-index: 4;}
+.select h3{font-size: 12px;font-weight: normal;}
+.select span{position: absolute;right: 0;top:0;height: 100%;width: 20%;
+background: url(../img/icon/select.gif)center center no-repeat;}
+.show_select{position:absolute;left:0;top: 22px;background-color:#FFF ;width: 100%;display: none;}
+.show_select li{padding-left: 10px;}
+/*page*/
+.page {text-align: center;}
+.page a{height: 24px;display:linline-block;line-height: 24px;
+border:#ccc solid 1px;padding:4px 12px;margin: 0 2px;}
+.page .h1{display:linline-block;border:#ccc solid 1px;padding:4px 12px;margin: 0 2px;}
+.morepage{padding-left:14px;display:inline-block;height: 24px;line-height: 24px;}
+.pageNum{width: 29px;padding:0 3px;border:#CCC solid 1px;height: 24px;line-height: 24px\9;text-align: center;}
+.bt{width:44px;height: 24px;line-height: 24px;border:#CCC solid 1px;background-color: #E8E8E8;}
+.ye{padding:0 10px;}
+
+
+/*商品介绍*/
+.grey{background-color: #F0F0F0;}
+/*位置*/
+.userPosition{font-size: 12px;margin-top:25px;margin-bottom: 15px;}
+.userPosition em{font-style: normal;}
+.userPosition a:hover{text-decoration: underline;}
+.descripition_info{background-color: #FFF;}
+.descripition{border:#CCC solid 1px;}
+.descripition .leftArea{width:309px;}
+.descripition .rightArea{width:688px;border-left:#CCC solid 1px;}
+/*商品图片展示*/
+.descripition_img .big{height: 340px;text-align: center;}
+.sm{padding-left: 1px;margin:0 auto;width:265px;}
+.sm li{float: left;margin-left:-1px;}
+.sm img{border:#CCC solid 1px;}
+.sm .active{border-color:#096DBA;position: relative;}
+.des_content{padding:10px;}
+.des_content_tit{font:bold 16px/22px "微软雅黑";padding:13px 25px;}
+.des_content .dl{margin-bottom: 8px;}
+.des_content .dt{width:75px;float: left;text-indent: 17px;line-height:25px;}
+.des_content .dd{padding-left: 75px;}
+.des_money{font-size:18px;color:#FF0000;font-family: verdana;}
+.des_money em{font-style: normal;font-size:12px;}
+/*换购*/
+.hg{padding-top:4px;display: inline-block;}
+.hg_icon{width:55px;height: 18px;display: inline-block;background: url(../img/icon/hg.gif)left top no-repeat;
+color:#FFF;font-style: normal;line-height: 18px;text-indent: 16px;margin-right: 10px;}
+/*送货*/
+.des_position{background-color: #F2F2F2;padding:15px 0;}
+.theGoods{line-height: 24px;padding-left:16px;}
+.des_position .selectColor{line-height: 34px;}
+.des_item{color:#666;padding:9px 10px;border:#CCC solid 1px;float: left;background-color: #FFF;
+margin-right: 10px;margin-bottom:5px;}
+.des_active{border-color:#096DBA;}
+.des_item_sm{padding:5px 10px;}
+.des_position .des_more{line-height: 55px;}
+/*数量*/
+.des_number{border:#CCC solid 1px;height: 32px;width:82px;float: left;}
+.des_number div{height: 100%;float:left;}
+.reduction{width:15px;line-height: 32px;text-align: center;color:#333;}
+.plus{width:15px;line-height: 32px;text-align:center;color:#333;}
+.reduction{border-radius: solid 1px #CCC;}
+.plus{border-left: solid 1px #CCC;}
+.des_input{width:50px;}
+.des_input input{height: 100%;width:100%;line-height: 32px\9;text-align: center;}
+.xg{line-height: 32px;float: left;padding-left:10px;font-weight: bold;color:#656565;}
+.xg em{font-style: normal;color:#FB7700;}
+/*已选择*/
+.des_select{font-weight: bold;margin:22px 0 12px;text-indent: 17px;}
+.des_select span{color:#0479C9;}
+/*shop*/
+.shop_buy{text-indent: 17px;margin}
+.shoppping_btn,.buy_btn{display:inline-block;width:184px;height:48px;}
+.line{width:1px;height: 90px;display: inline-block;background-color:#CCC;overflow:hidden;}
+.line,.shoppping_btn,.buy_btn{vertical-align: middle;}
+
+
+
+
+
+
+
+
+
+
+
+
