--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@
 .shopitem_text h3{font-size: 16px;font-family: "微软雅黑";font-weight: normal;color:#181818;line-height: 30px;}
 /*底部样式*/
 .h2_25{height:25px;}
+.hr_45{height:45px;overflow: hidden;}
 .hr_7{height: 7px;overflow: hidden;}
 .hr_15{height: 15px;overflow: hidden;}
 .footer{text-align: center;background-color:#D4D4D4 ;line-height: 24px;padding:50px 0;}
@@ -269,11 +270,119 @@ margin-right: 10px;margin-bottom:5px;}
 .des_select{font-weight: bold;margin:22px 0 12px;text-indent: 17px;}
 .des_select span{color:#0479C9;}
 /*shop*/
-.shop_buy{text-indent: 17px;margin}
+.shop_buy{text-indent: 17px;margin:0 20px 10px;}
 .shoppping_btn,.buy_btn{display:inline-block;width:184px;height:48px;}
 .line{width:1px;height: 90px;display: inline-block;background-color:#CCC;overflow:hidden;}
-.line,.shoppping_btn,.buy_btn{vertical-align: middle;}
+.line,.shoppping_btn,.buy_btn{vertical-align: middle;margin:0 20px;}
+.des_note{text-indent: 17px;margin-bottom: 15px;}
+.des_note .note{color:#999999;}
+/*左侧列表*/
+.des_info .leftArea{width:190px;}
+.des_info .rightArea{width:790px;}
+.recommend{border: #CCC solid 1px;background-color: #FFF;padding-bottom: 15px;}
+.recommend .tit{height: 39px;line-height: 39px;border-bottom: #CCC 1px solid;text-indent:15px;font-size: 16px;background-color:#F3F3F3 ;}
+.recommend .item{float: none;padding:10px 10px;height: auto;}
+.recommend .money{padding-top:0;}
+/*详细介绍*/
+.des_infoContent{border:solid 1px #CCC;background-color:#FFF ;}
+.des_tit{height: 39px;border:solid 1px #CCC;background-color: #CCC;}
+.des_tit li{float: left;width:50%;font: 14px/39px "宋体";text-align: center;}
+.des_tit .active{background-color:#0479CA;font-weight: bold;color:#FFF;}
 
+.ad{padding:30px 0;text-align: center;}
+.info_tit{height: 26px;border-bottom: solid 1px #CCC;font-family: "微软雅黑";margin-bottom: 18px;}
+.info_tit h3{float: left;font-size: 16px;color:#2375A5;border-bottom: #2375A5 solid 1px;
+height: 26px;margin-bottom: -1px;position: relative;padding-right: 8px;}
+.info_tit h4{font-size: 12px;line-height: 26px;padding-left:4px;color;#656565;}
+.info_text{padding:0 20px;}
+.info_text p{font-size: 12px;line-height: 22px;color:#656565;}
+.center{display: block;margin:0 auto;}
+/*商品评价*/
+.shopDes_tit{height: 38px;line-height: 38px;color:#656565;font-size: 14px;padding:10px;}
+.score_box{padding-left:10px;height: 120px;}
+.score{font-family: "微软雅黑";float: left;margin-right: 10px;}
+.score em{font-size: 18px;color:#65657D;font-style: normal;}
+.score span{font-size: 50px;color:#FF8C00;}
+.score_speed{float: left;width:450px;line-height: 16px;font-size: 12px;margin-top:12px;position: relative;}
+.score_speed_text{height: 16px;background-color: #BDBDBD;overflow: hidden;color:#FFF;}
+.score_speed_text li{float: left;}
+.score_speed_text .speed_01{width:114px;text-indent: 26px;}
+.score_speed_text .speed_02{width:82px;}
+.score_speed_text .speed_03{width:76px;}
+.score_speed_text .speed_04{width:65px;}
+.parse{display:inline-block;margin-top:5px;}
+/*满意切换*/
+.review_tab{height: 32px;background-color: #F2F2F2;}
+.review{height: 100%;line-height: 32px;padding-left: 20px;}
+.review li{float: left;height: 100%;margin-right: 40px;}
+.review li a{display: inline-block;height:30px;line-height:30px;padding:0 5px;}
+.review .active{color:#317DE6;font-weight: bold;border-bottom: #317DE6 solid 2px;}
+.review_sort{padding:5px;}
+.review_sort a{display: inline-block;height: 20px;line-height: 20px;border:1px solid #ccc;
+padding: 0 20px 0 6px;background:url(../img/icon/xia.jpg) 58px center no-repeat;}
+
+.review_list{padding-top:18px;margin-bottom: 10px;}
+.review_userHead {width:170px;}
+.review_user{width:60px;margin-left:40px;text-align: center;}
+.review_user img{width:60px;display: block;height:60pxs;}
+.review_user p{line-height: 20px;}
+.stars_box .stars{margin-top:1px;}
+.stars_text{font-weight: bold;padding-left:10px;}
+.review_t{height: 24px;padding-top: 5px;}
+.review_cont p{line-height: 30px;}
+.ding,.cai{color:#096DBA;margin-right: 10px;}
+
+/*购物车*/
+.stepBox{width:396px;padding-top:26px;}
+.step{background: url(../img/shopcar/car1.jpg)left top no-repeat;height: 19px;}
+.step_text{color:#FFF;font-size:12px;line-height: 20px;}
+.step_text li{float: left;}
+.step_01{margin-left:-20px;}
+.step_01,.step_03{width:30%;}
+.step_02{width:40%;text-align: center;}
+.step_03{text-align: right;}
+.step_text .active{color:#F3E402;font-weight: bold;}
+.shopingCart{padding-top:10px;}
+.shoping_item{border:1px solid #CCC;}
+.shoping_tit{height: 31px;background: url(../img/shopcar/car2.jpg)left top repeat-x;
+font:16px/31px "微软雅黑";color:#444444;text-indent: 12px;border-bottom: solid 1px #CCC;}
+.padding-shop{padding:25px 30px;}
+.shoping_list_text{float:left;width: 76px;}
+.shoping_list li{height:24px;margin-bottom: 10px;}
+.shoping_list_text em{color:#F30;font-style: normal;margin-right: 5px;}
+.input{height: 22px;border:1px solid #ccc;padding:0 6px;}
+.input_b{width: 392px;}
+.input_s{width:100px;}
+.input_s2{width:70px;}
+.jian{padding:0 3px;}
+.affirm{width:114px;height: 28px;background-color:#3F8EF9;color:#FFF;}
+
+.shop_way{float:left;margin-right: 40px;}
+.shoping_list_text1{float:left;margin-right:10px;}
+.wx{float: left;height: 24px;padding-right:5px;margin-top:-3px;}
+.backCar{float: right;font-size: 12px;color:#3377FF;font-family: "宋体";margin-right: 33px;}
+
+/*登录*/
+.login_logo .comWidth{width:630px;}
+.login_logo .logo{margin-left: 60px;}
+.welcome_tit{font:22px/85px "微软雅黑";color:#FFF;float:left;padding-left:22px;}
+.login_box{border:solid 1px #CCC;width:458px;margin:10px auto;position: relative;}
+.login_cont{padding:15px 76px;}
+.l_tit{color:#999;line-height: 20px;}
+.login_input{border:#999 solid 1px;height: 32px;line-height: 32px\9;text-indent: 5px;width:100%;}
+.user_icona{background: url(../img/icon/7.登录_r4_c4.gif)right center no-repeat;}
+.user_iconb{background: url(../img/icon/登录_r4_c4.gif)right center no-repeat;}
+.mb_10{margin-bottom: 10px;}
+.autoLogin{padding-top:17px;margin-bottom: 20px;}
+.checked{position: relative;top:3px;margin-right: 3px;}
+.login_bt{width:309px;height: 36px;background: url(../img/icon/7.登录_r6_c2.gif)left center no-repeat;}
+.login_friend{padding-top:34px;}
+.login_list{padding-bottom:50px;}
+.login_list li{float: left;line-height:20px; margin: 0 4px;}
+.login_list span{color:#999;margin:0 2px;}
+.login_friend p{font-style: normal;color:#BDBDBD;font-size:12px;margin-bottom: 5px;}
+.login_link{width:115px;height: 31px;background: url(../img/icon/7.登录_r8_c6.gif)left center no-repeat;
+position: absolute;right:0;bottom:2px;}
 
 
 
